Fix column count on smaller devices

--- a/src/blocks/cards-collection/scss/_mixins.scss
+++ b/src/blocks/cards-collection/scss/_mixins.scss
@@ -45,12 +45,12 @@
 				--columns: 2;
 			}
 		}
+	}
 
-		&[class][class] {
+	&[class][class] > * {
 
-			@include below(tablet) {
-				--columns: 1;
-			}
+		@include below(tablet) {
+			--columns: 1;
 		}
 	}
 }
